tests/errors/lit_enum.rs
use set_builder::set;

fn main() {
    set! { x };
}
