tests/errors/lit_enum.stderr
error: expected `:` after bindings, if you were trying to create an array, use `[...]` instead
 --> tests/errors/lit_enum.rs:4:5
  |
4 |     set! { x };
  |     ^^^^^^^^^^
  |
  = note: this error originates in the macro `set` (in Nightly builds, run with -Z macro-backtrace for more info)
